src/screen.scss
@import 'variables';

html {
  color: $black;
  font: normal 1.3rem/1.6 $font-family;

  // ref: http://stackoverflow.com/questions/11006812
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;

  @media screen and (max-width: 769px) {
    font: normal 1rem $font-family;
    font: 16px;
    line-height: 1.5;
  }

  overflow-x: hidden;
}

body {
  background-color: $white;
  margin: 0;
  padding-top: 0;

  overflow-x: hidden;
}

footer {
  font: 0.7em $alt-font-family;
  padding: 2em 0 1.6em;
  text-align: center;
}

a {
  &:link, &:visited {
    color: $link-color;
    text-decoration: none;
  }

  &:hover, &:focus, &:active {
    color: $link-color;
    text-decoration: underline;
  }
}

p, ol, ul, dl, blockquote {
  margin: 1.2em 0 1.6em;

  @media screen and (max-width: 768px) {
    margin: 1em 0;
  }
}

figure {
  display: block;
  margin: 3em auto 2em;
  max-width:80%;

  img {
    display:block;
    margin: auto;
  }

  img, table {
    max-width:100%;
  }

  figcaption {
    text-align: center;
    font-style:italic;
    font-size: 0.9em;
    padding-top:0.6em;
    position: relative;
  }

  cite {
    color: #777;
    font-size: 0.6em;
    font-style: normal;
    text-transform: uppercase;
    position: absolute;
    top: 0;
    right: 0;
  }

  @media screen and (max-width: 768px) {
    max-width: 90%;
  }
}

ol, ul, blockquote, pre {
  margin: 1.5em 2em;
}

ol, ul {
  margin: 1.5em 1em;

  li {

    margin-bottom: 0.4em;

    ol, ul {
      margin: 0.5em 1em 0.8em 0;
    }

    ul {
      list-style: circle;
    }

    ol {
      list-style: lower-alpha;
    }
  }
}

dl {
  dt {
    font: bold 1.0em $alt-font-family;
    margin-top: 0.5em;
    &:first-child {
      margin-top: 0;
    }
  }
  dd {
    font-style: italic;
    font-size: 0.9em;
  }
}

ol {
  list-style: decimal-leading-zero;
}

ul {
  margin-left: 0em;
}

blockquote, pre {
  border-left: 1px dotted $black;
  font-size: 0.9em;
  padding: 0.5em 0 0.5em 1.5em;
}

blockquote cite {
  margin-left: 3em;
}

hr {
  border: 0;
  border-bottom: 1px dotted $black;
  margin: 2em auto;
  max-width: 20%;

  .dark & {
    border-color: $white;
  }
}

h1,h2,h3,h4,h5,h6 {
  font-family: $alt-font-family;
  font-weight: bold;
  line-height: 1.3;
  margin: 1.4em 0 0.4em;

  a:link, a:visited {
    color: $black;
  }

  a:focus, a:hover {
    text-decoration: underline;
  }
}

h1 {
  font-family: $font-family;
  font-weight: normal;
  margin: 2em 0 1em;
  text-align:center;

  small {
    font-family: $alt-font-family;
    font-size: 0.4em;
  }

  @media screen and (max-width: 480px) {
    margin: 0.5em 0 0.5em;
  }
}

code {
  color: #048b51;
  font: normal 0.85em/1.4em $mono-font-family;

  a > & {
    color: $link-color;
  }
}

pre {
  @extend code;

  font-size: 0.9em;
  line-height: 1.3em;
  padding: 0.5em 1em 0.5em 2em;

  @media screen and (max-width: 480px) {
    border: none;
    padding: 1em 0;
    overflow-wrap: break-word;
    overflow: hidden;
  }
}

table {
  font-size: 0.9em;
  margin: 1em 0 2em;
  width: 100%;

  td, th {
    padding: 0.3em 1em;
    vertical-align: top;
  }

  td {
    border-bottom: 1px dotted $black;
  }

  tr:last-child td {
    border-bottom: 0;
  }

  th {
    border-bottom: 1px dotted $black;
    font-weight: normal;
    letter-spacing: 0.05em;
    padding-top: 1em;
    text-align: left;
    text-transform: uppercase;
  }

  @media screen and (max-width: 480px) {
    margin: 0;
    width: 100%;
  }
}

.dark {
  background-color: $black;
  color: $white;

  a {
    &:link, &:visited, &:hover, &:focus, &:active {
      color: #fff;
      text-decoration: none;
      border-bottom: 1px dotted #fff;
    }

    &:hover, &:focus, &:active {
      border-bottom: 1px solid #fff;
    }
  }
}

